# BarGraphWeb

./: README.md  pyproject.toml  requirements.txt
src/: app.py
src/plot/: __init__.py
src/sample_data/: config.json  default_graph_config.json  randn_1D.csv
src/utilities/: plot.py  type.py  widgets.py
src/widgets/: __init__.py  widgets.py
tmp/: tmp.py  tmp2.py  tmp_data.csv
