[tool.poetry]
name = "bar-graph-web"
version = "0.1.0"
description = ""
authors = ["Ryuichi Shinsei <275051h@gs.kochi-tech.ac.jp>"]
license = "MIT License"
readme = "README.md"
packages = [
    { include = "src"},
]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.30.0"
matplotlib = "^3.8.2"
numpy = "^1.26.3"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
