[tool.poetry]
name = "bar-graph-web"
version = "0.1.0"
description = ""
authors = ["Ryuichi Shinsei <275051h@gs.kochi-tech.ac.jp>"]
license = "MIT License"
readme = "README.md"
packages = [
    { include = "src"},
]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.30.0"
matplotlib = "^3.8.2"
numpy = "^1.26.3"
opencv-python = "^4.9.0.80"
simpleeval = "^0.9.13"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"
mypy = "^1.8.0"

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.ruff]
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".git",
]
line-length = 79
indent-width = 4

[tool.ruff.lint]
select = [
    "C",
    "E",
    "F",
    "ARG",
    "W",
]
ignore = [

]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 10

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
